src/component/multi_progress/snapshots/envision__component__multi_progress__tests__view_without_percentages.snap
---
source: src/component/multi_progress/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│○ Item 1                                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
